### Dec 1st ###
Paulo & Musa:
 - Completed implementation of a two player mode
 - Tested and verified sensor interrupts occurring correctly
 - Tested & verified score tracking and player scores works correctly
 - Tested & verified keyboard control of the launcher works correctly

### Nov 28th ###
Paulo & Musa:
 - Began implementation of two player mode for the launcher game.
    - 2 player score tracking
    - Current turn tracking

### Nov 27th ###
Paulo:
 - Implemented c function for random number generation. (used for target selection)
Musa:
  - Implemented keyboard control for the launcher.

### Nov 26th ###
Paulo:
 - Implemented handling lego controller interrupts, recognizing between sensors, etc.
 - Implemented beeping the speaker when a target is hit with the launcher.

### Nov 21st ###
Paulo:
 - Implemented the code to launch a projectile
 - Modified the timer to accept an input
 - Implemented ISR handling for the timer

Musa:
 - Implemented steering the launcher
 - Enabled nested interrupts

### Nov 20th ###
Paulo:
 - Built the launcher and control mechanisms
 - Began work on implementing the lego controller
 - Finalized the project proposal

### Nov 14th ###
Paulo & Musa:
 - Implemented the display controller
 - Set up the timer + interrupts
 - Set up the button control + interrupts